ABXS-3L and LWPS multi-file updates

--- a/product-catalogs.html
+++ b/product-catalogs.html
@@ -58,7 +58,7 @@ master-slider: yes
         </tr>
         <tr>
           <td>Page 2.5-2.6:</td>
-          <td><a href="assets/pdf/catalogs/waterblast_2020/2020_Waterblast_Catalog_web_spreads_07.pdf" target="_blank">AutoPack-2L-B, AutoPack-PROP</a></td>
+          <td><a href="assets/pdf/catalogs/waterblast_2020/2020_Waterblast_Catalog_web_spreads_07.pdf" target="_blank">AutoPack 2L, AutoPack ProP</a></td>
         </tr>
         <tr>
           <td>Page 2.7-2.8:</td>
@@ -97,7 +97,7 @@ master-slider: yes
         </tr>
         <tr>
           <td>Page 3.3-3.4:</td>
-          <td><a href="assets/pdf/catalogs/waterblast_2020/2020_Waterblast_Catalog_web_spreads_16.pdf" target="_blank">AutoPack-PRO</a></td>
+          <td><a href="assets/pdf/catalogs/waterblast_2020/2020_Waterblast_Catalog_web_spreads_16.pdf" target="_blank">AutoPack PRO</a></td>
         </tr>
         <tr>
           <td>Page 3.5-3.6:</td>
