--- a/rentals.html
+++ b/rentals.html
@@ -64,7 +64,7 @@ landing: yes
                   <img src="/assets/img/product/autopack-3l-01.jpg" alt="Rent AutoPack-3L" class="img-responsive" />
                 </td>
                 <td class="pkg-desc">
-                  <h4>AutoPack-3L</h4>
+                  <h4>AutoPack 3L</h4>
                   <p>Triple lance exchanger cleaning</p>
                 </td>
                 <td class="pkg-cta">   
@@ -79,8 +79,8 @@ landing: yes
                   <img src="/assets/img/sentinel_logo.png" alt="Rent AutoPack-3L-S" class="img-responsive" />
                 </td>
                 <td class="pkg-desc">
-                  <h4>AutoPack-3L with Sentinel</h4>
-                  <p>Fully automated triple lance exchanger cleaning<br><em style="color:#d34b40;">Coming September 2020!</em></p>
+                  <h4>AutoPack 3L with Sentinel</h4>
+                  <p>Automated triple lance exchanger cleaning</p>
                 </td>
                 <td class="pkg-cta">   
                   <a href="https://info.stoneagetools.com/l/644393/2020-07-30/265hv7?PI=AutoPack-3L-Sentinel" data-featherlight="iframe" data-featherlight-iframe-height="625" data-featherlight-iframe-width="480" class="btn btn-lg contact" role="button">Rent Now</a>
@@ -94,7 +94,7 @@ landing: yes
                   <img src="/assets/img/product/autopack-2l-01.jpg" alt="Rent AutoPack-2L" class="img-responsive" />
                 </td>
                 <td class="pkg-desc">
-                  <h4>AutoPack-2L</h4>
+                  <h4>AutoPack 2L</h4>
                   <p>Dual lance exchanger cleaning</p>
                 </td>
                 <td class="pkg-cta">   
@@ -109,8 +109,8 @@ landing: yes
                   <img src="/assets/img/product/autopack-pro-01.jpg" alt="Rent AutoPack-Pro" class="img-responsive" />
                 </td>
                 <td class="pkg-desc">
-                  <h4>AutoPack-Pro with exchanger accessory package</h4>
-                  <p>Adapts the AutoPack-Pro for exchanger cleaning</p>
+                  <h4>AutoPack PRO with exchanger accessory package</h4>
+                  <p>Adapts the AutoPack PRO for exchanger cleaning</p>
                 </td>
                 <td class="pkg-cta">   
                   <a href="https://info.stoneagetools.com/l/644393/2020-07-30/265hv7?PI=AutoPackPro-Exchanger" data-featherlight="iframe" data-featherlight-iframe-height="625" data-featherlight-iframe-width="480" class="btn btn-lg contact" role="button">Rent Now</a> 
@@ -124,7 +124,7 @@ landing: yes
                   <img src="/assets/img/product/autopack-prop-02.jpg" alt="Rent AutoPack-ProP" class="img-responsive" />
                 </td>
                 <td class="pkg-desc">
-                  <h4>AutoPack-ProP</h4>
+                  <h4>AutoPack ProP</h4>
                   <p>Single lance exchanger cleaning for smaller or hard to access bundles</p>
                 </td>
                 <td class="pkg-cta">   
@@ -170,7 +170,7 @@ landing: yes
                 </td>
                 <td class="pkg-desc">
                   <h4>Fin Fan accessory</h4>
-                  <p>Adapts ABX-3L/2L for Fin Fan cleaning<br><em class="grey">Select applications</em></p>
+                  <p>Adapts AutoBox-3L/2L for Fin Fan cleaning<br><em class="grey">Select applications</em></p>
                 </td>
                 <td class="pkg-cta">   
                   <a href="https://info.stoneagetools.com/l/644393/2020-07-30/265hv7?PI=FinFan" data-featherlight="iframe" data-featherlight-iframe-height="625" data-featherlight-iframe-width="480" class="btn btn-lg contact" role="button">Rent Now</a> 
@@ -223,7 +223,7 @@ landing: yes
                   <img src="/assets/img/product/autopack-pro-01.jpg" alt="Rent AutoPack-Pro" class="img-responsive" />
                 </td>
                 <td class="pkg-desc">
-                  <h4>AutoPack-Pro</h4>
+                  <h4>AutoPack PRO</h4>
                   <p>Cleans pipes and drains using hose sizes 3/2 to 8/4, or 3/8 rubber covered</p>
                 </td>
                 <td class="pkg-cta">   
@@ -337,7 +337,7 @@ landing: yes
                   <img src="/assets/img/product/autopack-prop-02.jpg" alt="Rent AutoPack-ProP" class="img-responsive" />
                 </td>
                 <td class="pkg-desc">
-                  <h4>AutoPack-ProP</h4>
+                  <h4>AutoPack ProP</h4>
                   <p>Single lance exchanger cleaning for smaller or hard to access bundles</p>
                 </td>
                 <td class="pkg-cta">   
