--- a/results-exchanger-cleaning.html
+++ b/results-exchanger-cleaning.html
@@ -17,19 +17,19 @@ permalink: /exchanger-cleaning-applications
 
       <div class="media">
         <div class="media-left">
-          <a href="/abx-2l">
+          <a href="/autobox-2l">
             <img class="media-object" src="assets/img/product/thumb-abx-2l-01.jpg" alt="AutoBox ABX-2L">
           </a>
         </div>
         <div class="media-body">
-          <a href="/abx-2l"><h4 class="media-heading">AutoBox ABX-2L</h4></a>
+          <a href="/autobox-2l"><h4 class="media-heading">AutoBox 2L</h4></a>
           Automated flex lancing system
         </div>
       </div>
 
       <div class="media">
         <div class="media-left">
-          <a href="/abx-2l">
+          <a href="/abx-pro">
             <img class="media-object" src="assets/img/product/thumb-abx-pro-02.jpg" alt="AutoBox ABX-PRO">
           </a>
         </div>
