--- a/waterblast-automation/air-knife.html
+++ b/waterblast-automation/air-knife.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 page-type: product
-title: StoneAge Air Knife accessory for AutoBox ABX-2L and ABX-3L for exchanger tube cleaning
+title: StoneAge Air Knife accessory for AutoBox 2L and 3L for exchanger tube cleaning
 excerpt: The Air Knife cleans effluent off hoses with a blade of pressurized air before they are retracted back into the tractor.
 permalink: /air-knife
 master-slider: yes
@@ -198,7 +198,7 @@ master-slider: yes
       </div>
       <div class="item">
         <a href="/abx-3l"><img src="/assets/img/product/thumb-abx-3l-03.jpg" alt="AutoBox ABX-3L">
-        <h5>AutoBox ABX-3L</h5></a>
+        <h5>AutoBox 3L</h5></a>
       </div>
       <div class="item">
         <a href="/lightweight-positioner"><img src="/assets/img/product/thumb-lwp-02.jpg" alt="Lightweight positioner for exchanger cleaning">
