--- a/waterblast-automation/autobox-2l.html
+++ b/waterblast-automation/autobox-2l.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 page-type: product
-title: StoneAge AutoBox ABX-2L Automated Flex Lancing/Exchanger Tube Cleaning
-excerpt: The AutoBox ABX-2L is an automated system for hands-free heat exchanger tube cleaning applications.
-permalink: /abx-2l
+title: StoneAge AutoBox  2L Automated Flex Lancing/Exchanger Tube Cleaning
+excerpt: The AutoBox 2L is an automated system for hands-free heat exchanger tube cleaning applications.
+permalink: /autobox-2l
 master-slider: yes
 ---
 
@@ -13,7 +13,7 @@ master-slider: yes
     <ul class="breadcrumb">
       <li><a href="/">Home</a></li>
       <li><a href="/waterblast-tools-automated-equipment">Waterblast Tools &amp; Equipment</a></li>
-      <li class="active">AutoBox ABX-2L</li>
+      <li class="active">AutoBox 2L</li>
     </ul> 
   </div>
 </div>
@@ -51,7 +51,7 @@ master-slider: yes
 
     <div class="col-md-7 padding-left-60">
       <div class="product-heading">
-        <h1>AutoBox ABX-2L</h1>
+        <h1>AutoBox 2L</h1>
         <div class="dropdown product-social">
           <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i> Share</a>
           <ul class="dropdown-menu">
@@ -62,8 +62,8 @@ master-slider: yes
       </div>
       <p class="product-description promo-heading"><em>Package it with AutoPacks! <a href="/autopack-2l" style="font-weight:300;">Find out how <i class="fa fa-angle-double-right" aria-hidden="true"></i></a></em></p>
 
-      <p class="product-description">The StoneAge AutoBox ABX-2L is an automated two lance system for hands-free heat exchanger tube cleaning applications. It was designed to reliably control one or two flex lances with an emphasis on portability, ease of setup, and safety.</p>
-      <p>The ABX-2L can be used with any pressure rated hose ranging in size from 3/2 to 8/4. Paired with StoneAge Banshee rotary tube cleaning nozzles and Lightweight Positioner, the ABX-2L offers safe and efficient tube cleaning in the harshest exchanger environments.</p>
+      <p class="product-description">The StoneAge AutoBox 2L is an automated two lance system for hands-free heat exchanger tube cleaning applications. It was designed to reliably control one or two flex lances with an emphasis on portability, ease of setup, and safety.</p>
+      <p>The AutoBox 2L can be used with any pressure rated hose ranging in size from 3/2 to 8/4. Paired with StoneAge Banshee rotary tube cleaning nozzles and Lightweight Positioner, the AutoBox 2L offers safe and efficient tube cleaning in the harshest exchanger environments.</p>
       <h2>Features</h2>
       <ul class="feature-list">
         <li>Lightweight, modular design allows a single operator to move, set up and run</li>
@@ -150,7 +150,7 @@ master-slider: yes
             </div>
             <aside class="col-sm-4 col-sm-offset-3 aside-box">
               <img src="/assets/img/thumb/autopack-box.png" class="img-responsive" style="width:100px; float:left; margin:20px 20px 60px 0;" alt="AutoPack-2L" />
-              <h3>AutoPack-2L</h3>
+              <h3>AutoPack 2L</h3>
               <p>Everything you need to successfully complete exchanger cleaning jobs &mdash; <span style="font-weight:400;">organized in a durable job box.</span><br /><a href="/autopack-2l"><strong>More information <i class="fa fa-angle-double-right" aria-hidden="true"></i></strong></a></p>
             </aside>
             
@@ -169,14 +169,14 @@ master-slider: yes
               <ul class="list-unstyled basic">
                 <h3>Manuals</h3>
 <!--                <li><a href="/assets/pdf/manuals/ABX-2L-V2_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;ABX-2L User Manual</a> <em class="grey">- Current 8mm version</em></li>-->
-                <li><a href="/assets/pdf/manuals/ABX-2L-B_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;ABX-2L User Manual</a></li>
+                <li><a href="/assets/pdf/manuals/ABX-2L-B_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;AutoBox 2L User Manual</a></li>
                 <li><a href="/assets/pdf/manuals/CB-ABX_user_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;CB-ABX Control Box User Manual</a></li>
               </ul>
             </div>
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Documentation</h3>
-                <li><a href="/assets/pdf/tool-talks/ABX-2L_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-2L Tool Talk</a></li>
+                <li><a href="/assets/pdf/tool-talks/ABX-2L_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox 2L Tool Talk</a></li>
               </ul>
             </div>
             <aside class="col-sm-3 col-sm-offset-1 aside-box">
@@ -216,7 +216,7 @@ master-slider: yes
     <div id="owl-related" class="owl-carousel owl-theme">
       <div class="item">
         <a href="/autopack-2l"><img class="img-responsive" src="/assets/img/product/thumb-autopack-2l-01.jpg" alt="AutoPack-3L">
-        <h5>AutoPack-2L</h5></a>
+        <h5>AutoPack 2L</h5></a>
       </div>
       <div class="item">
         <a href="/banshee"><img src="/assets/img/product/thumb-banshee-01.jpg" alt="Banshee rotary tube cleaners">
@@ -240,7 +240,7 @@ master-slider: yes
       </div>
       <div class="item">
         <a href="/abx-3l"><img src="/assets/img/product/thumb-abx-3l-03.jpg" alt="AutoBox ABX-3L">
-        <h5>AutoBox ABX-3L</h5></a>
+        <h5>AutoBox 3L</h5></a>
       </div>
       <div class="item">
         <a href="/abx-500"><img src="/assets/img/product/thumb-abx-500-03.jpg" alt="AutoBox ABX-500">
@@ -257,7 +257,7 @@ master-slider: yes
     <div class="col-md-7">
 
         <h2>Productive automated cleaning of heat exchanger and evaporator tubes</h2>
-        <p>When paired with <a href="/banshee">Banshee rotary tube cleaning nozzles</a> and <a href="/lightweight-positioner">Lightweight Positioner</a>, the ABX-2L offers safe and efficient tube cleaning in the harshest exchanger environments.</p>
+        <p>When paired with <a href="/banshee">Banshee rotary tube cleaning nozzles</a> and <a href="/lightweight-positioner">Lightweight Positioner</a>, the AutoBox 2L offers safe and efficient tube cleaning in the harshest exchanger environments.</p>
     </div>
     <div class="col-md-4 col-md-offset-1">
       <table>
@@ -286,7 +286,7 @@ master-slider: yes
       <div class="item active">
         <div class="insight">
           <img src="/assets/img/quote.png" alt="quote" class="quote" />
-          <p>The StoneAge ABX-2L works great in acid service and has allowed us to become 100% automated.</p>
+          <p>The StoneAge AutoBox 2L works great in acid service and has allowed us to become 100% automated.</p>
           <p class="signed">- Mark Blanchard,<br/>Water Works Industrial Services</p>
         </div>
         <img src="/assets/img/sliders/abx-2l-operator.jpg" alt="ABX-2L cleaning small tube exchanger">
