--- a/waterblast-automation/autobox-abx-2l-02.html
+++ b/waterblast-automation/autobox-abx-2l-02.html
@@ -463,7 +463,7 @@ master-slider: yes
       </div>
       <div class="item">
         <a href="/abx-3l"><img src="/assets/img/product/thumb-abx-3l-03.jpg" alt="AutoBox ABX-3L">
-        <h5>AutoBox ABX-3L</h5></a>
+        <h5>AutoBox 3L</h5></a>
       </div>
       <div class="item">
         <a href="/abx-500"><img src="/assets/img/product/thumb-abx-500-03.jpg" alt="AutoBox ABX-500">
@@ -480,7 +480,7 @@ master-slider: yes
     <div class="col-md-7">
 
         <h2>Productive automated cleaning of heat exchanger and evaporator tubes</h2>
-        <p>When paired with <a href="/banshee">Banshee rotary tube cleaning nozzles</a> and <a href="/lightweight-positioner">Lightweight Positioner</a>, the ABX-2L offers safe and efficient tube cleaning in the harshest exchanger environments.</p>
+        <p>When paired with <a href="/banshee">Banshee rotary tube cleaning nozzles</a> and <a href="/lightweight-positioner">Lightweight Positioner</a>, the AutoBox 2L offers safe and efficient tube cleaning in the harshest exchanger environments.</p>
     </div>
     <div class="col-md-4 col-md-offset-1">
       <table>
