--- a/waterblast-automation/autobox-abx-pro.html
+++ b/waterblast-automation/autobox-abx-pro.html
@@ -338,7 +338,7 @@ master-slider: yes
     <div id="owl-related" class="owl-carousel owl-theme">
       <div class="item">
         <a href="/autopack-prop"><img class="img-responsive" src="/assets/img/product/thumb-autopack-pro-01.jpg" alt="AutoPack-PROP">
-        <h5>AutoPack-PROP</h5></a>
+        <h5>AutoPack ProP</h5></a>
       </div>
       <div class="item">
         <a href="/propositioner"><img src="/assets/img/product/thumb-propositioner-01.jpg" alt="ProPositioner for exchanger cleaning">
@@ -378,7 +378,7 @@ master-slider: yes
       </div>
       <div class="item">
         <a href="/abx-3l"><img src="/assets/img/product/thumb-abx-3l-03.jpg" alt="AutoBox ABX-3L">
-        <h5>AutoBox ABX-3L</h5></a>
+        <h5>AutoBox 3L</h5></a>
       </div>
       <div class="item">
         <a href="/fin-fan-accessory"><img src="/assets/img/product/thumb-fin-fan-07.jpg" alt="ABX-2L fin fan cleaning kit">
