--- a/waterblast-automation/autopack-3l.html
+++ b/waterblast-automation/autopack-3l.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 page-type: product
-title: The AutoPack-3L automated equipment kit organizes all the components required to automate exchanger cleaning with the triple-lance AutoBox ABX-3l hose tractor right out of the box.
+title: The AutoPack 3L automated equipment kit organizes all the components required to automate exchanger cleaning with the triple-lance AutoBox 3L hose tractor right out of the box.
 permalink: /autopack-3l
 master-slider: yes
 ---
@@ -224,23 +224,23 @@ master-slider: yes
     <div id="owl-related" class="owl-carousel owl-theme">
       <div class="item">
         <a href="/autopack-lwp"><img class="img-responsive" src="/assets/img/product/thumb-autopack-pro-01.jpg" alt="AutoPack-PROP">
-        <h5>AutoPack-PROP</h5></a>
+        <h5>AutoPack PROP</h5></a>
       </div>
       <div class="item">
-        <a href="/autopack-2l-b"><img class="img-responsive" src="/assets/img/product/thumb-autopack-3l-01.jpg" alt="AutoPack-2L-B">
-        <h5>AutoPack-2L-B</h5></a>
+        <a href="/autopack-2l"><img class="img-responsive" src="/assets/img/product/thumb-autopack-3l-01.jpg" alt="AutoPack-2L-B">
+        <h5>AutoPack 2L</h5></a>
       </div>
       <div class="item">
         <a href="/abx-3l"><img class="img-responsive" src="/assets/img/product/thumb-abx-3l-02.jpg" alt="AutoBox ABX-3L exchanger tube cleaning">
-        <h5>AutoBox ABX-3L</h5></a>
+        <h5>AutoBox 3L</h5></a>
       </div>
       <div class="item">
         <a href="/abx-pro"><img class="img-responsive" src="/assets/img/product/thumb-abx-pro-02.jpg" alt="AutoBox ABX-PRO hose drive for pipe and exchanger tube cleaning">
         <h5>AutoBox ABX-PRO</h5></a>
       </div>
       <div class="item">
-        <a href="/abx-2l"><img class="img-responsive" src="/assets/img/product/thumb-abx-2l-01.jpg" alt="AutoBox ABX-2L exchanger tube cleaning">
-        <h5>AutoBox ABX-2L</h5></a>
+        <a href="/autobox-2l"><img class="img-responsive" src="/assets/img/product/thumb-abx-2l-01.jpg" alt="AutoBox ABX-2L exchanger tube cleaning">
+        <h5>AutoBox 2L</h5></a>
       </div>
       <div class="item">
         <a href="/lightweight-positioner"><img class="img-responsive" src="/assets/img/product/thumb-lwp-01.jpg" alt="Lightweight Positioner for exchanger tube cleaning">
