--- a/waterblast-automation/autopack-pro.html
+++ b/waterblast-automation/autopack-pro.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 page-type: product
-title: The AutoPack-PRO comes equipped with everything you need to successfully complete pipe cleaning with the AutoBox ABX-PRO hose tractor.
+title: The AutoPack PRO comes equipped with everything you need to successfully complete pipe cleaning with the ProDrive hose tractor.
 permalink: /autopack-pro
 master-slider: yes
 ---
@@ -12,7 +12,7 @@ master-slider: yes
     <ul class="breadcrumb">
       <li><a href="/">Home</a></li>
       <li><a href="/waterblast-tools-automated-equipment">Waterblast Tools &amp; Equipment</a></li>
-      <li class="active">AutoPack-PRO</li>
+      <li class="active">AutoPack PRO</li>
     </ul> 
   </div>
 </div>
@@ -46,7 +46,7 @@ master-slider: yes
 
     <div class="col-md-7 padding-left-60">
       <div class="product-heading">
-        <h1>AutoPack-PRO</h1>
+        <h1>AutoPack PRO</h1>
         <div class="dropdown product-social">
           <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i> Share</a>
           <ul class="dropdown-menu">
@@ -171,7 +171,7 @@ master-slider: yes
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Documentation</h3>
-            <li><a href="/assets/pdf/reference/AutoPack-PRO_job_box_contents.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoPack-PRO Job Box Contents</a></li>
+            <li><a href="/assets/pdf/reference/AutoPack-PRO_job_box_contents.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoPack PRO Job Box Contents</a></li>
             <li><a href="/assets/pdf/tool-talks/ABX-PRO_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-PRO Tool Talk</a></li>
           </ul>
         </div>
@@ -222,15 +222,15 @@ master-slider: yes
     <div id="owl-related" class="owl-carousel owl-theme">
       <div class="item">
         <a href="/autopack-prop"><img class="img-responsive" src="/assets/img/product/thumb-autopack-pro-01.jpg" alt="AutoPack-LWP">
-        <h5>AutoPack-PROP</h5></a>
+        <h5>AutoPack ProP</h5></a>
       </div>
       <div class="item">
         <a href="/autopack-3l"><img class="img-responsive" src="/assets/img/product/thumb-autopack-3l-01.jpg" alt="AutoPack-3L">
-        <h5>AutoPack-3L</h5></a>
+        <h5>AutoPack 3L</h5></a>
       </div>
       <div class="item">
         <a href="/autopack-2l"><img class="img-responsive" src="/assets/img/product/thumb-autopack-2l-01.jpg" alt="AutoPack-2L">
-        <h5>AutoPack-2L-B</h5></a>
+        <h5>AutoPack 2L</h5></a>
       </div>
       <div class="item">
         <a href="/propositioner"><img class="img-responsive" src="/assets/img/product/thumb-propositioner-01.jpg" alt="ProPositioner">
@@ -246,7 +246,7 @@ master-slider: yes
       </div>
       <div class="item">
         <a href="/abx-3l"><img class="img-responsive" src="/assets/img/product/thumb-abx-3l-02.jpg" alt="AutoBox ABX-3L exchanger tube cleaning">
-        <h5>AutoBox ABX-3L</h5></a>
+        <h5>AutoBox 3L</h5></a>
       </div>
       <div class="item">
         <a href="/abx-2l"><img class="img-responsive" src="/assets/img/product/thumb-abx-2l-01.jpg" alt="AutoBox ABX-2L exchanger tube cleaning">
