--- a/waterblast-automation/autopack-pro_OLD.html
+++ b/waterblast-automation/autopack-pro_OLD.html
@@ -268,7 +268,7 @@ master-slider: yes
       </div>
       <div class="item">
         <a href="/abx-3l"><img class="img-responsive" src="/assets/img/product/thumb-abx-3l-02.jpg" alt="AutoBox ABX-3L exchanger tube cleaning">
-        <h5>AutoBox ABX-3L</h5></a>
+        <h5>AutoBox 3L</h5></a>
       </div>
       <div class="item">
         <a href="/abx-2l"><img class="img-responsive" src="/assets/img/product/thumb-abx-2l-01.jpg" alt="AutoBox ABX-2L exchanger tube cleaning">
