--- a/waterblast-automation/compass.html
+++ b/waterblast-automation/compass.html
@@ -207,7 +207,7 @@ master-slider: yes
       </div>
       <div class="item">
         <a href="/autopack-prop"><img class="img-responsive" src="/assets/img/product/thumb-autopack-lwp-01.jpg" alt="AutoPack-PROP">
-        <h5>AutoPack-PROP</h5></a>
+        <h5>AutoPack ProP</h5></a>
       </div>
     </div>
   </div>
