--- a/waterblast-automation/fin-fan-accessory.html
+++ b/waterblast-automation/fin-fan-accessory.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 page-type: product
-title: Fin Fan Cooler Cleaning Accessory for AutoBox ABX-2L Automated Flex Lancing System
+title: Fin Fan Cooler Cleaning Accessory for AutoBox 2L Automated Flex Lancing System
 excerpt: The Fin Fan Accessory, is designed to adapt the AutoBox ABX–2L for the specific requirements of cleaning Fin Fan style exchangers.
 permalink: /fin-fan-accessory
 master-slider: yes
@@ -61,7 +61,7 @@ master-slider: yes
       <div class="clearfix"></div>
       </div>
       
-      <p class="product-description">The Fin Fan Accessories are designed to adapt the AutoBox family of flex lance systems for the specific requirements of cleaning Fin Fan style exchangers. The Fin Fan kit is compatible with the ABX-PRO, ABX-2L, and ABX-3L.</p>
+      <p class="product-description">The Fin Fan Accessories are designed to adapt the AutoBox family of flex lance systems for the specific requirements of cleaning Fin Fan style exchangers. The Fin Fan kit is compatible with AutoBox single, dual, and triple lance tractors.</p>
       <p>Fin Fan exchangers can be much wider than standard heat exchangers and are often accessed by very narrow walkways. Fin Fan Accessory components allow the AutoBox and Lightweight Positioner to be safely mounted in tight walkway spaces for this type of cleaning. Customizable rail lengths and simple mounting clamps enable the positioning system to accommodate most Fin Fan headers and configurations.</p>
       
       <h2>Features</h2>
@@ -184,7 +184,7 @@ master-slider: yes
                 <a href="#" data-featherlight="/assets/vid/vids.html #fin-fan-vid">
                   <img src="assets/vid/thumb/fin-fan-vid.jpg" alt="Fin Fan exchanger cleaning accessory video" class="img-responsive" />
                 </a>
-                <p class="caption">Fin Fan Accessory Overview <em>- ABX-2L version</em></p>
+                <p class="caption">Fin Fan Accessory Overview <em>- AutoBox 2L version</em></p>
                 <!-- end lightbox call -->
               </div>
               <div class="col-sm-4 col-centered">
@@ -192,7 +192,7 @@ master-slider: yes
                 <a href="#" data-featherlight="/assets/vid/vids.html #fin-fan-train-vid">
                   <img src="assets/vid/thumb/fin-fan-train-vid.png" alt="Fin Fan Accessory training video" class="img-responsive" />
                 </a>
-                <p class="caption">Fin Fan Accessory Training <em>- ABX-2L version</em></p>
+                <p class="caption">Fin Fan Accessory Training <em>- AutoBox 2L version</em></p>
                 <!-- end lightbox call -->
               </div>
             </div>
@@ -211,8 +211,12 @@ master-slider: yes
   <div class="row">     
     <div id="owl-related" class="owl-carousel owl-theme">
       <div class="item">
-        <a href="/abx-2l"><img class="img-responsive" src="/assets/img/product/thumb-abx-2l-01.jpg" alt="ABX-2L flex lancing">
-        <h5>AutoBox ABX-2L</h5></a>
+        <a href="/autobox-2l"><img class="img-responsive" src="/assets/img/product/thumb-abx-2l-01.jpg" alt="ABX-2L flex lancing">
+        <h5>AutoBox 2L</h5></a>
+      </div>
+      <div class="item">
+        <a href="/autobox-3l"><img src="/assets/img/product/thumb-abx-3l-03.jpg" alt="AutoBox ABX-3L">
+        <h5>AutoBox 3L</h5></a>
       </div>
       <div class="item">
         <a href="/lightweight-positioner"><img src="/assets/img/product/thumb-lwp-02.jpg" alt="Lightweight positioner for exchanger cleaning">
@@ -227,10 +231,6 @@ master-slider: yes
         <h5>AutoBox ABX-PRO</h5></a>
       </div>
       <div class="item">
-        <a href="/abx-3l"><img src="/assets/img/product/thumb-abx-3l-03.jpg" alt="AutoBox ABX-3L">
-        <h5>AutoBox ABX-3L</h5></a>
-      </div>
-      <div class="item">
         <a href="/abx-500"><img src="/assets/img/product/thumb-abx-500-03.jpg" alt="AutoBox ABX-500">
         <h5>AutoBox ABX-500</h5></a>
       </div>
@@ -243,7 +243,7 @@ master-slider: yes
 <section class="product-extra fluid-container bg-lt-grey">
   <div class="container padding-tb-30">
     <div class="col-md-7">
-      <h2>Adapt the AutoBox ABX–2L for Fin Fan style exchangers</h2>
+      <h2>Adapt the AutoBox 2L for Fin Fan style exchangers</h2>
       <p>Customizable rail lengths and simple mounting clamps enable the positioning system to accommodate most all Fin Fan headers and configurations.</p>
     </div>
     <div class="col-md-4 col-md-offset-1">
