--- a/waterblast-automation/lightweight-positioner.html
+++ b/waterblast-automation/lightweight-positioner.html
@@ -70,7 +70,7 @@ master-slider: yes
       </ul>
       
       <div class="accessories">
-        <h3>Compatible with:</h3> <a class="btn" href="/abx-3l" data-toggle="tooltip" title="AutoBox ABX-3L">3L</a> <a class="btn" href="/abx-2l" data-toggle="tooltip" title="AutoBox ABX-2L">2L</a> <a class="btn" href="/abx-pro" data-toggle="tooltip" title="AutoBox ABX-PRO">PRO</a>
+        <h3>Compatible with:</h3> <a class="btn" href="/abx-3l" data-toggle="tooltip" title="AutoBox 3L">3L</a> <a class="btn" href="/abx-2l" data-toggle="tooltip" title="AutoBox 2L">2L</a> <a class="btn" href="/abx-pro" data-toggle="tooltip" title="ProDrive">PRO</a>
       </div>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
@@ -139,8 +139,8 @@ master-slider: yes
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Documentation</h3>
-            <li><a href="/assets/pdf/tool-talks/ABX-3L_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ABX-3L Tool Talk</a></li>
-            <li><a href="/assets/pdf/tool-talks/ABX-2L_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ABX-2L Tool Talk</a></li>
+            <li><a href="/assets/pdf/tool-talks/ABX-3L_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox 3L Tool Talk</a></li>
+            <li><a href="/assets/pdf/tool-talks/ABX-2L_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox 2L Tool Talk</a></li>
             <li><a href="/assets/pdf/tool-talks/ABX-PRO_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ABX-PRO Tool Talk</a></li>
           </ul>
             <p>The Lightweight Positioner is an accessory product for the AutoBox family of hose tractors. Usage details can be found in documentation for AutoBox products.</p>
@@ -163,7 +163,7 @@ master-slider: yes
               </a>
             </div>
             <!-- End Lightbox call -->
-            <p class="caption">ABX-3L Overview</p>
+            <p class="caption">AutoBox 3L Overview</p>
           </div>
           <div class="col-sm-4 col-centered">
             <!-- Lightbox call -->
@@ -173,7 +173,7 @@ master-slider: yes
               </a>
             </div>
             <!-- End Lightbox call -->
-            <p class="caption">ABX-2L Overview</p>
+            <p class="caption">AutoBox 2L Overview</p>
           </div>
           <div class="col-sm-4 col-centered">
             <!-- Lightbox call -->
@@ -183,7 +183,7 @@ master-slider: yes
               </a>
             </div>
             <!-- End Lightbox call -->
-            <p class="caption">ABX-2L Training</p>
+            <p class="caption">AutoBox 2L Setup</p>
           </div>
         </div>
       </section>
@@ -285,12 +285,12 @@ master-slider: yes
   <div class="row">     
     <div id="owl-related" class="owl-carousel owl-theme">
       <div class="item">
-        <a href="/abx-3l"><img class="img-responsive" src="/assets/img/product/thumb-abx-3l-03.jpg" alt="AutoBox ABX-3L exchanger tube cleaning">
-        <h5>AutoBox ABX-3L</h5></a>
+        <a href="/autobox-3l"><img class="img-responsive" src="/assets/img/product/thumb-abx-3l-03.jpg" alt="AutoBox ABX-3L exchanger tube cleaning">
+        <h5>AutoBox 3L</h5></a>
       </div>
       <div class="item">
-        <a href="/abx-2l"><img class="img-responsive" src="/assets/img/product/thumb-abx-2l-01.jpg" alt="ABX-2L flex lancing">
-        <h5>AutoBox ABX-2L</h5></a>
+        <a href="/autobox-2l"><img class="img-responsive" src="/assets/img/product/thumb-abx-2l-01.jpg" alt="ABX-2L flex lancing">
+        <h5>AutoBox 2L</h5></a>
       </div>
       <div class="item">
         <a href="/abx-pro"><img class="img-responsive" src="/assets/img/product/thumb-abx-pro-02.jpg" alt="AutoBox ABX-PRO hose drive for pipe cleaning">
