--- a/waterblast-automation/autopack-2l.html
+++ b/waterblast-automation/autopack-2l.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 page-type: product
-title: The AutoPack-2L-B automated equipment kit organizes all the components required to automate exchanger cleaning with the dual-lance AutoBox ABX-2L-Belt version hose tractor right out of the box.
-permalink: /autopack-2l-b
+title: The AutoPack 2L automated equipment kit organizes all the components required to automate exchanger cleaning with the dual-lance AutoBox ABX-2L-Belt version hose tractor right out of the box.
+permalink: /autopack-2l
 master-slider: yes
 ---
 
@@ -12,7 +12,7 @@ master-slider: yes
     <ul class="breadcrumb">
       <li><a href="/">Home</a></li>
       <li><a href="/waterblast-tools-automated-equipment">Waterblast Tools &amp; Equipment</a></li>
-      <li class="active">AutoPack-2L-B</li>
+      <li class="active">AutoPack 2L</li>
     </ul> 
   </div>
 </div>
@@ -46,7 +46,7 @@ master-slider: yes
 
     <div class="col-md-7 padding-left-60">
       <div class="product-heading">
-        <h1>AutoPack-2L-B</h1>
+        <h1>AutoPack 2L</h1>
         <div class="dropdown product-social">
           <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i> Share</a>
           <ul class="dropdown-menu">
@@ -56,7 +56,7 @@ master-slider: yes
         <div class="clearfix"></div>
       </div>
       
-      <p class="product-description">Built around the <a href="/abx-2l">AutoBox ABX-2L</a> belt version dual lance tractor, the AutoPack-2L-B is equipped with everything you need to successfully complete tube bundle or Fin Fan heat exchanger tube cleaning.</p>
+      <p class="product-description">Built around the <a href="/abx-2l">AutoBox 2L</a> belt version dual lance tractor, the AutoPack 2L is equipped with everything you need to successfully complete tube bundle or Fin Fan heat exchanger tube cleaning.</p>
       
       <h2>Features</h2>
       <ul class="feature-list">
@@ -172,8 +172,8 @@ master-slider: yes
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Documentation</h3>
-            <li><a href="/assets/pdf/reference/AutoPack-2L-B_job_box_contents.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoPack-2L-B Job Box Contents</a></li>
-            <li><a href="/assets/pdf/tool-talks/ABX-2L_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-2L Tool Talk</a></li>
+            <li><a href="/assets/pdf/reference/AutoPack-2L-B_job_box_contents.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoPack 2L Job Box Contents</a></li>
+            <li><a href="/assets/pdf/tool-talks/ABX-2L_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox 2L Tool Talk</a></li>
           </ul>
         </div>
         <aside class="col-sm-3 col-sm-offset-1 aside-box">
@@ -223,19 +223,19 @@ master-slider: yes
     <div id="owl-related" class="owl-carousel owl-theme">
       <div class="item">
         <a href="/autopack-3l"><img class="img-responsive" src="/assets/img/product/thumb-autopack-3l-01.jpg" alt="AutoPack-3L">
-        <h5>AutoPack-3L</h5></a>
+        <h5>AutoPack 3L</h5></a>
       </div>
       <div class="item">
         <a href="/autopack-pro"><img class="img-responsive" src="/assets/img/product/thumb-autopack-2l-01.jpg" alt="AutoPack-2L">
-        <h5>AutoPack-PRO</h5></a>
+        <h5>AutoPack PRO</h5></a>
       </div>
       <div class="item">
         <a href="/autopack-prop"><img class="img-responsive" src="/assets/img/product/thumb-autopack-lwp-01.jpg" alt="AutoPack-PROP">
-        <h5>AutoPack-PROP</h5></a>
+        <h5>AutoPack ProP</h5></a>
       </div>
       <div class="item">
-        <a href="/abx-2l"><img class="img-responsive" src="/assets/img/product/thumb-abx-2l-01.jpg" alt="AutoBox ABX-2L exchanger tube cleaning">
-        <h5>AutoBox ABX-2L</h5></a>
+        <a href="/autobox-2l"><img class="img-responsive" src="/assets/img/product/thumb-abx-2l-01.jpg" alt="AutoBox ABX-2L exchanger tube cleaning">
+        <h5>AutoBox 2L</h5></a>
       </div>
       <div class="item">
         <a href="/abx-pro"><img class="img-responsive" src="/assets/img/product/thumb-abx-pro-02.jpg" alt="AutoBox ABX-PRO hose drive for pipe and exchanger tube cleaning">
@@ -243,7 +243,7 @@ master-slider: yes
       </div>
       <div class="item">
         <a href="/abx-3l"><img class="img-responsive" src="/assets/img/product/thumb-abx-3l-02.jpg" alt="AutoBox ABX-3L exchanger tube cleaning">
-        <h5>AutoBox ABX-3L</h5></a>
+        <h5>AutoBox 3L</h5></a>
       </div>
       <div class="item">
         <a href="/lightweight-positioner"><img class="img-responsive" src="/assets/img/product/thumb-lwp-01.jpg" alt="Lightweight Positioner for exchanger tube cleaning">
