--- a/waterblast-automation/autopack-prop.html
+++ b/waterblast-automation/autopack-prop.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 page-type: product
-title: The AutoPack-PROP comes equipped with everything you need to successfully complete single lance tube cleaning with the AutoBox ABX-PRO hose tractor.
+title: The AutoPack PROP comes equipped with everything you need to successfully complete single lance tube cleaning with the AutoBox ABX-PRO hose tractor.
 permalink: /autopack-prop
 master-slider: yes
 ---
@@ -12,7 +12,7 @@ master-slider: yes
     <ul class="breadcrumb">
       <li><a href="/">Home</a></li>
       <li><a href="/waterblast-tools-automated-equipment">Waterblast Tools &amp; Equipment</a></li>
-      <li class="active">AutoPack-PROP</li>
+      <li class="active">AutoPack PROP</li>
     </ul> 
   </div>
 </div>
@@ -46,7 +46,7 @@ master-slider: yes
 
     <div class="col-md-7 padding-left-60">
       <div class="product-heading">
-        <h1>AutoPack-PROP</h1>
+        <h1>AutoPack ProP</h1>
         <div class="dropdown product-social">
           <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i> Share</a>
           <ul class="dropdown-menu">
@@ -56,7 +56,7 @@ master-slider: yes
         <div class="clearfix"></div>
       </div>
       
-      <p class="product-description">Built around the <a href="/abx-pro">AutoBox ABX-PRO</a>, a versatile hose drive that can be adapted to a wide range of tube and pipe cleaning applications, the AutoPack-PROP adds the new <a href="/propositioner">ProPositioner</a> and comes equipped with everything you need to successfully complete single lance tube cleaning.</p>
+      <p class="product-description">Built around the <a href="/abx-pro">ProDrive</a>, a versatile hose drive that can be adapted to a wide range of tube and pipe cleaning applications, the AutoPack-PROP adds the new <a href="/propositioner">ProPositioner</a> and comes equipped with everything you need to successfully complete single lance tube cleaning.</p>
       
       <h2>Features</h2>
       <ul class="feature-list">
@@ -172,8 +172,8 @@ master-slider: yes
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Documentation</h3>
-            <li><a href="/assets/pdf/reference/AutoPack-ProP_job_box_contents.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoPack-PROP Job Box Contents</a></li>
-            <li><a href="/assets/pdf/tool-talks/ABX-PRO_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-PRO Tool Talk</a></li>
+            <li><a href="/assets/pdf/reference/AutoPack-ProP_job_box_contents.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoPack ProP Job Box Contents</a></li>
+            <li><a href="/assets/pdf/tool-talks/ABX-PRO_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ProDrive Tool Talk</a></li>
           </ul>
         </div>
         <aside class="col-sm-3 col-sm-offset-1 aside-box">
@@ -227,11 +227,11 @@ master-slider: yes
       </div>
       <div class="item">
         <a href="/autopack-3l"><img class="img-responsive" src="/assets/img/product/thumb-autopack-3l-01.jpg" alt="AutoPack-3L">
-        <h5>AutoPack-3L</h5></a>
+        <h5>AutoPack 3L</h5></a>
       </div>
       <div class="item">
-        <a href="/autopack-2l-b"><img class="img-responsive" src="/assets/img/product/thumb-autopack-2l-01.jpg" alt="AutoPack-2L">
-        <h5>AutoPack-2L-B</h5></a>
+        <a href="/autopack-2l"><img class="img-responsive" src="/assets/img/product/thumb-autopack-2l-01.jpg" alt="AutoPack-2L">
+        <h5>AutoPack 2L</h5></a>
       </div>
       <div class="item">
         <a href="/propositioner"><img class="img-responsive" src="/assets/img/product/thumb-propositioner-01.jpg" alt="ProPositioner">
@@ -247,7 +247,7 @@ master-slider: yes
       </div>
       <div class="item">
         <a href="/abx-3l"><img class="img-responsive" src="/assets/img/product/thumb-abx-3l-02.jpg" alt="AutoBox ABX-3L exchanger tube cleaning">
-        <h5>AutoBox ABX-3L</h5></a>
+        <h5>AutoBox 3L</h5></a>
       </div>
       <div class="item">
         <a href="/abx-2l"><img class="img-responsive" src="/assets/img/product/thumb-abx-2l-01.jpg" alt="AutoBox ABX-2L exchanger tube cleaning">
