--- a/waterblast-automation/propositioner.html
+++ b/waterblast-automation/propositioner.html
@@ -179,7 +179,7 @@ master-slider: yes
       </div>
       <div class="item">
         <a href="/abx-3l"><img class="img-responsive" src="/assets/img/product/thumb-abx-3l-03.jpg" alt="AutoBox ABX-3L exchanger tube cleaning">
-        <h5>AutoBox ABX-3L</h5></a>
+        <h5>AutoBox 3L</h5></a>
       </div>
       <div class="item">
         <a href="/fin-fan-accessory"><img class="img-responsive" src="/assets/img/product/thumb-fin-fan-07.jpg" alt="ABX-2L fin fan cleaning kit">
