--- a/waterblast-automation/rigid-lance-machine.html
+++ b/waterblast-automation/rigid-lance-machine.html
@@ -437,7 +437,7 @@ master-slider: yes
       </div>
       <div class="item">
         <a href="/abx-3l"><img src="/assets/img/product/thumb-abx-3l-03.jpg" alt="AutoBox ABX-3L">
-        <h5>AutoBox ABX-3L</h5></a>
+        <h5>AutoBox 3L</h5></a>
       </div>
     </div>
   </div>
