--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -71,7 +71,7 @@ permalink: /waterblast-tools-automated-equipment
         <table class="table">
           <tbody>
             <tr>
-              <td colspan="2" style="text-align:center;">Built around ProDrive</td>
+              <td colspan="2" style="text-align:center;">Built around ProPositioner</td>
             </tr>
             <tr>
               <td colspan="2" style="text-align:center;">Single lance tube cleaning</td>
