Add GTM to Sentinel & Rentals, update upcoming events on home page

--- a/index.html
+++ b/index.html
@@ -328,10 +328,10 @@ landing: yes
     </div>
     
     <div class="row" style="margin-top:25px;">
-      <a href="https://www.pollutec.com/" target="_blank"><img src="https://www.pollutec.com/content/dam/sitebuilder/ref/pollutec/images/homepage/POL2020-logo.png/_jcr_content/renditions/original.image_file.239.90.file/777824205/POL2020-logo.png" class="img-responsive"/ alt="Pollutec 2021"></a>
+      <a href="https://www.wwettshow.com/en/home.html" target="_blank"><img src="/assets/img/thumb/upcoming-events-wwett-2022.jpg" class="img-responsive"/ alt="WWETT 2022"></a>
       <div class="caption text-center">
         <h4>
-          <span class="small"><strong><a href="https://www.pollutec.com/" target="_blank">Pollutec</a></strong><br>Environment &amp; Energy Technologies Trade Show<br>12-15 October, 2021<br>Lyon Eurexpo</span></h4>
+          <span class="small"><strong><a href="https://www.wwettshow.com/en/home.html" target="_blank">WWETT 22</a></strong><br>February 21-24, 2022<br>Indiana Convention Center</span></h4>
       </div>
     </div>
     
