--- a/sentinel-lp/sentinel.html
+++ b/sentinel-lp/sentinel.html
@@ -2,15 +2,9 @@
 <!--  Last Published: Fri Apr 02 2021 15:59:26 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="605622cc5e94b161866c6dab" data-wf-site="605622cc5e94b10d776c6daa">
   <head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-19225233-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'UA-19225233-1');
-  </script>
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-PJDHVTX');</script>
+  <!-- End Google Tag Manager -->
   
   <!-- Start Pardot campaign tracking Code - Whitney, 04/2020 -->
   <script type='text/javascript'>
@@ -70,6 +64,10 @@
   <!-- End Facebook Pixel Code -->
 </head>
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PJDHVTX" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+
   <!-- StoneAge Header -->
   <nav class="navbar navbar-default navbar-fixed-top">
     <!-- Utilities Nav -->
@@ -132,7 +130,7 @@
     <div id="w-node-_7a9390b4-ff4a-7543-57d5-e490bb81577d-866c6dab" data-w-id="7a9390b4-ff4a-7543-57d5-e490bb81577d" style="opacity:0" class="content-block">
       <h1 class="heading-1">Today&#x27;s jobs demand advanced equipment &amp; results.</h1>
       <p class="p-body"><strong>AUTOBOX 3L with Sentinel Automation Technology</strong> cleans heat exchangers faster, safer, easier, and more precisely.<br></p>
-      <a href="https://info.stoneagetools.com/l/644393/2020-06-19/22f426" data-featherlight="iframe" data-featherlight-iframe-height="550" data-featherlight-iframe-width="480" class="btn w-button">Schedule a demo</a>
+      <a href="https://info.stoneagetools.com/l/644393/2020-06-19/22f426" data-featherlight="iframe" data-featherlight-iframe-height="550" data-featherlight-iframe-width="480" data-gtm-event="Schedule Demo Btn Clk" class="btn w-button">Schedule a demo</a>
       <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #sentinel-overview-vid" class="link-block w-inline-block">
         <p class="minicta-icon"></p>
         <p class="minicta-text">Watch the video</p>
@@ -158,7 +156,7 @@
         <div data-w-id="6e715a76-5eee-88dc-e18e-153ba81f4be3" style="opacity:0" class="content-block content-right">
           <h1 class="heading-1">The Future of Exchanger Tube Cleaning</h1>
           <p class="p-body">Sentinel Automation Technology seamlessly integrates with StoneAge&#x27;s AutoBox 3L tractor and uses an active sensor system to automatically position the cleaning nozzles and clean exchanger tubes end to end, even in difficult low visibility conditions.<br></p>
-          <a href="#" class="btn w-button">Schedule a virtual overview</a>
+          <a href="https://info.stoneagetools.com/l/644393/2021-03-09/2ss8bh" data-featherlight="iframe" data-featherlight-iframe-height="500" data-featherlight-iframe-width="480" data-gtm-event="Schedule Demo Btn Clk" class="btn w-button">Schedule a demo</a>
         </div>
       </div>
     </div>
@@ -231,7 +229,7 @@
           </div>
         </div>
       </div>
-      <a href="https://info.stoneagetools.com/l/644393/2021-03-09/2ss8bh" data-featherlight="iframe" data-featherlight-iframe-height="550" data-featherlight-iframe-width="480" class="btn w-button" style="margin-bottom:120px;">Schedule a demo</a>
+      <a href="https://info.stoneagetools.com/l/644393/2021-03-09/2ss8bh" data-featherlight="iframe" data-featherlight-iframe-height="550" data-featherlight-iframe-width="480" data-gtm-event="Schedule Demo Btn Clk" class="btn w-button" style="margin-bottom:120px;">Schedule a demo</a>
     </div>
 <!--
     <div class="options-container w-container">
@@ -283,21 +281,21 @@
           <h1 class="heading-4">Documentation</h1>
           <p class="p-body light">See how Sentinel Technology is helping industrial cleaning professionals around the world.</p>
         </div>
-        <a href="https://info.stoneagetools.com/l/644393/2021-05-17/32hx1v" target="_blank" class="link-docs w-inline-block"><img src="images/thumb-pack_01.jpg" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 591px) 93vw, 550px" srcset="images/thumb-pack_01-p-500.jpeg 500w, images/thumb-pack_01.jpg 550w" alt="Automation technology for exchanger tube cleaning" class="image">
+        <a href="https://info.stoneagetools.com/l/644393/2021-05-17/32hx1v" target="_blank" class="link-docs w-inline-block" data-gtm-event="Download Brochure Btn Clk"><img src="images/thumb-pack_01.jpg" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 591px) 93vw, 550px" srcset="images/thumb-pack_01-p-500.jpeg 500w, images/thumb-pack_01.jpg 550w" alt="Automation technology for exchanger tube cleaning" class="image">
           <h3 class="heading-2 red">Brochure</h3>
           <p class="p-400 light">Why Sentinel Automation Technology is a must-have for industrial exchanger tube cleaning</p>
           <div class="btn secondary">
             <div class="text-block">Download</div>
           </div>
         </a>
-        <a href="https://info.stoneagetools.com/l/644393/2021-05-17/32hx2s" target="_blank" class="link-docs w-inline-block"><img src="images/thumb-reym_01.jpg" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 591px) 93vw, 550px" srcset="images/thumb-reym_01-p-500.jpeg 500w, images/thumb-reym_01.jpg 550w" alt="Automation technology for exchanger tube cleaning" class="image-2">
+        <a href="https://info.stoneagetools.com/l/644393/2021-05-17/32hx2s" target="_blank" class="link-docs w-inline-block" data-gtm-event="Download Case Study Btn Clk"><img src="images/thumb-reym_01.jpg" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 591px) 93vw, 550px" srcset="images/thumb-reym_01-p-500.jpeg 500w, images/thumb-reym_01.jpg 550w" alt="Automation technology for exchanger tube cleaning" class="image-2">
           <h3 class="heading-2 red">Case Study</h3>
           <p class="p-400 light">Find out how one contractor cut cleaning time by 50% in zero visibility conditions</p>
           <div class="btn secondary">
             <div class="text-block">Download</div>
           </div>
         </a>
-        <a href="https://info.stoneagetools.com/l/644393/2021-05-13/31xcfb" target="_blank" class="link-docs w-inline-block"><img src="images/thumb-controller_01.jpg" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 591px) 93vw, 550px" srcset="images/thumb-controller_01-p-500.jpeg 500w, images/thumb-controller_01.jpg 550w" alt="Automation technology for exchanger tube cleaning" class="image-3">
+        <a href="https://info.stoneagetools.com/l/644393/2021-05-13/31xcfb" target="_blank" class="link-docs w-inline-block" data-gtm-event="Download White Paper Btn Clk"><img src="images/thumb-controller_01.jpg" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 591px) 93vw, 550px" srcset="images/thumb-controller_01-p-500.jpeg 500w, images/thumb-controller_01.jpg 550w" alt="Automation technology for exchanger tube cleaning" class="image-3">
           <h3 class="heading-2 red">White Paper</h3>
           <p class="p-400 light">Read about our usability research and how beginner operators turn pro in one shift</p>
           <div class="btn secondary">
@@ -306,7 +304,7 @@
         </a>
         <div id="w-node-c594c71f-0c36-b5b0-6337-dfde25150e7e-866c6dab" class="docs-cta">
           <p class="minivp-text"><span class="text-span-2"><strong>Ready to transform your industrial heat exchanger cleaning services?</strong> <br></span>A StoneAge representative can walk you through all the details of the Sentinel-enabled AutoBox 3L system and answer your questions.</p>
-          <a href="https://info.stoneagetools.com/l/644393/2021-03-09/2ss8bh" data-featherlight="iframe" data-featherlight-iframe-height="500" data-featherlight-iframe-width="480" class="btn w-button">Schedule a demo</a>
+          <a href="https://info.stoneagetools.com/l/644393/2021-03-09/2ss8bh" data-featherlight="iframe" data-featherlight-iframe-height="500" data-featherlight-iframe-width="480" data-gtm-event="Schedule Demo Btn Clk" class="btn w-button">Schedule a demo</a>
         </div>
         <div id="w-node-_3fc906d1-212b-e7c2-8720-1cf33e402d79-866c6dab" data-w-id="3fc906d1-212b-e7c2-8720-1cf33e402d79" style="opacity:0" class="docs-cta"></div>
       </div>
