--- a/rotary-waterblast-tools/banshee-tube-cleaners.html
+++ b/rotary-waterblast-tools/banshee-tube-cleaners.html
@@ -60,6 +60,7 @@ master-slider: yes
         </div>
       <div class="clearfix"></div>
       </div>
+      <p class="product-description promo-heading" style="text-transform: uppercase;">New male inlet for BN9.5 <span style="font-weight: 300;"> Now Available</span></p>
       
       <p class="product-description">The patented Banshee is the industry standard for exchanger cleaning. High pressure water acts as a liquid bearing, eliminating ball bearings, seals or lubricant used in conventional rotary tools. Each tool is easily configured to suit any tube cleaning application by choosing from a variety of replaceable heads and inlet options.</p>
       
