--- a/rotary-waterblast-tools/sg-swivel.html
+++ b/rotary-waterblast-tools/sg-swivel.html
@@ -89,7 +89,7 @@ master-slider: yes
                 <li role="presentation" class="active"><a href="#sg-p8" aria-controls="sg-p8" role="tab" data-toggle="tab">SG-P8P8</a></li>
                 <li role="presentation"><a href="#sg-p12" aria-controls="sg-p12" role="tab" data-toggle="tab">SG-P12P12-62</a></li>
                 <li role="presentation"><a href="#sg-mp12" aria-controls="sg-mp12" role="tab" data-toggle="tab">SG-MP12AV12</a></li>
-                <li role="presentation"><a href="#sg-mp12k" aria-controls="sg-mp12k" role="tab" data-toggle="tab">SG-MP12K-62</a></li>
+                <li role="presentation"><a href="#sg-mp12k-62" aria-controls="sg-mp12k-62" role="tab" data-toggle="tab">SG-MP12K-62</a></li>
                 <li role="presentation"><a href="#sg-mp16" aria-controls="sg-mp16" role="tab" data-toggle="tab">SG-MP16MP16-62</a></li>
                 <li role="presentation"><a href="#sg-p12k" aria-controls="sg-p12k" role="tab" data-toggle="tab">SG-CCN-P12K</a></li>
                 <li role="presentation"><a href="#sg-mp12k" aria-controls="sg-mp12k" role="tab" data-toggle="tab">SG-CCN-MP12K</a></li>
@@ -253,7 +253,7 @@ master-slider: yes
                   </table>     
                 </div>
                 <!-- SG-MP12K-62 -->
-                <div role="tabpanel" class="tab-pane" id="sg-mp12k">
+                <div role="tabpanel" class="tab-pane" id="sg-mp12k-62">
                   <table class="table specs table-hover">
                   <tbody>
                     <tr>
