--- a/waterblast-automation/autobox-3l.html
+++ b/waterblast-automation/autobox-3l.html
@@ -156,13 +156,13 @@ master-slider: yes
             </tr>
             <tr>
               <th>Dimensions</th>
-              <td> 8.3 x 16.9 x 8.2 in.</td>
-              <td><span class="metric">211 x 429 x 208 mm</span></td>
+              <td>11.35 x 11.64 x 16.99 in.</td>
+              <td><span class="metric">288 x 296 x 432 mm</span></td>
             </tr>
             <tr>
-              <th>Weight</th>
-              <td>49 lbs</td>
-              <td><span class="metric">22 kg</span></td>
+              <th>Tractor Weight</th>
+              <td>52.6 lbs</td>
+              <td><span class="metric">24 kg</span></td>
             </tr>
           </tbody>
           </table>
