--- a/assets/vid/vids.html
+++ b/assets/vid/vids.html
@@ -32,6 +32,9 @@
 <div id="sentinel-check">
   <iframe width="854" height="480" src="https://www.stoneagetools.com/assets/vid/Sentinel_system_check.mp4" frameborder="0" allowfullscreen></iframe>
 </div>
+<div id="esop-employees">
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/HG1iksG58CU" frameborder="0" allowfullscreen></iframe>
+</div>
 
 <!-- WB -->
 <div id="air-knife-vid">
