--- a/careers.html
+++ b/careers.html
@@ -24,8 +24,15 @@ permalink: /jobs
         </p>
       </div>
       <div class="col-sm-7">
+          <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #esop-employees">
+            <img src="assets/vid/thumb/esop-employees-slant.png" alt="StoneAge employees talk about ESOP" class="img-responsive" />
+          </a>
+        </div>
+<!--
+      <div class="col-sm-7">
         <img src="/assets/img/2020_SA_Team_hack-shirt.png" alt="StoneAge Durango staff" class="img-responsive" />
       </div>
+-->
     </div>
   </div>
 </section>
